Fix poor interaction between sf.css and Foundation
Foundation CSS specifies a "table tr th" selector, which is
more specific than "table th" and thus gets chosen. But it
has dark text on a light background, whereas sf.css is
specifying a dark background for <tr> elements. The result
was unreadable dark text on dark background. Making the
sf.css selector more specific ensures that it will be chosen,
thus making table headings look good again.


Former-commit-id: 44454356fbc3c0a4de0ca568c828f539999525aa

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -454,7 +454,7 @@ table th, table td {
 	padding: 0.7em 1.2em;
 }
 
-table th {
+table th, table tr th {
 	background-color: #404040;
 	color: #f4f4f6;
 	font-size: 0.9em;
